--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,9 +98,9 @@
         <h3 class="Secondheader">Contact Us</h3>
         <div class="FSfirstdiv">
             <div  class="FSseconddiv"> 
-                <button class="btn3"></button> <br>
-                <button class="btn3"></button> <br>
-                <button class="btn3"></button> <br>
+                <input type="text" class="btn3"><br>
+                <input type="text" class="btn3"><br>
+                <input type="text" class="btn3"><br>
                 <button class="btn4"></button>
             </div>
             <div class="FSthirddiv">
